syntax = "proto3";

package telegram.v1;
option go_package = "telegram/v1;telegramv1";

service AccessTokenService {
    // IssueAccessToken issues token for user with telegram id by telegram bot. X-API-KEY header must be provided.
    rpc IssueAccessToken (IssueAccessTokenRequest) returns (IssueAccessTokenResponse);
}

message IssueAccessTokenRequest {
    int64 tg_uid = 2;
}

message IssueAccessTokenResponse {
    string access_token = 1;
}

// start:
// check user existance by telegram_user_id (1 user_id <-> 1 telegram_user_id)
//  - create user if not present (random username+password, telegram_user_id)
//  - create access token if present (by api_key + telegram uid)

// access token
//  - sub (user_id)
//  - aud (telegram/web or other)

// protected rpc:
//  - access token in Authorization header
//  - backend checks whether token is valid on every request
